--- a/Study.html
+++ b/Study.html
@@ -538,9 +538,9 @@ items_part12 = _.shuffle(items_part12);
   debrief += "<h1>End of the study</h1>";
   debrief += "<p class='justify'>Thank you for your participation! The aim of this study was to investigate the perception ";
   debrief += "of unknown and ambiguous faces that were generated in another experiment.</br></br> "
-  debrief += "You can copy this code on Prolific: <b>C16B3THV</b> ";
+  debrief += "You can copy this code on Prolific: <b>7B9D5899</b> ";
   debrief += "or you can click on the following link to validate your participation:</p>";
-  debrief += "<a href='https://app.prolific.com/submissions/complete?cc=C16B3THV' target='_blank'>click here</a>";
+  debrief += "<a href='https://app.prolific.com/submissions/complete?cc=7B9D5899' target='_blank'>click here</a>";
 
   // TIMELINE ----------------------------------------------------------------------------------------------------------
   timeline.push(consent);
